--- a/package.json
+++ b/package.json
@@ -15,8 +15,18 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "styled-components": "^5.3.10",
+    "typescript": "5.0.4",
+    "workbox-precaching": "^6.5.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.5.0"
   }
 }
