--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "npx cypress run",
+    "test:watch": "npx cypress open"
   },
   "dependencies": {
     "@types/node": "18.16.2",
@@ -18,6 +20,7 @@
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "styled-components": "^5.3.10",
     "typescript": "5.0.4",
     "workbox-precaching": "^6.5.4"
@@ -26,7 +29,10 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/react": "^14.0.0",
+    "@types/styled-components": "^5.1.26",
+    "cypress": "^12.12.0",
     "jest": "^29.5.0"
   }
 }
