--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react-dom": "18.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
+    "next": "^13.4.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +32,7 @@
     "@svgr/webpack": "^8.0.1",
     "@testing-library/react": "^14.0.0",
     "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.1.3",
     "cypress": "^12.12.0",
     "jest": "^29.5.0"
   }
