Correções para build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,12 +8,7 @@
   "plugins": [
     "@typescript-eslint",
     "react-hooks",
-    "prettier",
-    "react",
-    "typescript",
-    "prettier/@typescript-eslint",
-    "prettier/react",
-    "prettier/prettier"
+    "react"
   ],
   "root": true,
   "rules": {
@@ -23,7 +18,7 @@
     "no-unused-vars": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "warn",
+    "react/prop-types": "warn"
   },
   "overrides": [
   ],
@@ -33,6 +28,5 @@
     "es6": true
   },
   "globals": {"React": "writable"},
-
   "ignorePatterns": ["node_modules/", "build/", ".next/", "!.prettierrc.js", "!.eslintrc.json", "!.babelrc"]
 }
