--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
     "next": "^13.4.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "styled-components": "^5.3.10",
-    "typescript": "5.0.4",
+    "typescript": "^5.1.3",
     "workbox-precaching": "^6.5.4"
   },
   "resolutions": {
@@ -32,8 +30,12 @@
     "@svgr/webpack": "^8.0.1",
     "@testing-library/react": "^14.0.0",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "babel-plugin-styled-components": "^2.1.3",
     "cypress": "^12.12.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "13.3.1"
   }
 }
