--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@vercel/analytics": "^1.0.1",
     "next": "^13.4.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
@@ -34,8 +35,8 @@
     "@typescript-eslint/parser": "^5.59.9",
     "babel-plugin-styled-components": "^2.1.3",
     "cypress": "^12.12.0",
-    "jest": "^29.5.0",
     "eslint": "^8.42.0",
-    "eslint-config-next": "13.3.1"
+    "eslint-config-next": "13.3.1",
+    "jest": "^29.5.0"
   }
 }
