--- a/package.json
+++ b/package.json
@@ -2,12 +2,40 @@
   "name": "im-welllucky",
   "version": "0.1.0",
   "private": true,
+  "workspaces": ["packages/*", "apps/*"],
+  "author": {
+    "email": "maxwellucas.wl@gmail.com",
+    "name": "Wellington Braga"},
+    "displayName": "im-welllucky",
+    "description": "Im Welllucky is a portfolio website for Wellington Braga, where he can show his projects and skills to the world.",
+    "homepage": "https://welllucky.me",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/welllucky/imWelllucky"},
+      "release": {
+      "repositoryUrl": "https://github.com/welllucky/imWelllucky",
+      "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "master",
+      "next",
+      "next-major",
+      "prod",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ]},
+    "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "npx cypress run",
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "start": "turbo start",
+    "lint": "turbo lint",
+    "test": "turbo test",
     "test:watch": "npx cypress open"
   },
   "dependencies": {
@@ -15,29 +43,16 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "@vercel/analytics": "^1.0.1",
-    "next": "^13.4.4",
-    "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.32.1",
-    "styled-components": "^5.3.10",
-    "typescript": "^5.1.3",
     "workbox-precaching": "^6.5.4"
-  },
-  "resolutions": {
-    "styled-components": "^5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
-    "@testing-library/react": "^14.0.0",
-    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "babel-plugin-styled-components": "^2.1.3",
-    "cypress": "^12.12.0",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.3.1",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "turbo": "^1.10.12"
   }
 }
