--- a/apps/imwellluck-web/package.json
+++ b/apps/imwellluck-web/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "@vercel/analytics": "^1.0.1",
+    "dotenv": "^16.3.1",
     "next": "^13.4.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "styled-components": "^5.3.10",
+    "styled-theming": "^2.2.0",
     "typescript": "^5.1.3",
     "workbox-precaching": "^6.5.4"
   },
@@ -39,6 +41,7 @@
     "eslint": "^8.42.0",
     "eslint-config-next": "13.3.1",
     "jest": "^29.5.0",
+    "jest-styled-components": "^7.1.1",
     "turbo": "^1.10.12"
   }
 }
