--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "im-welllucky",
   "version": "0.1.0",
   "private": true,
-  "workspaces": ["packages/*", "apps/*"],
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "author": {
     "email": "maxwellucas.wl@gmail.com",
-    "name": "Wellington Braga"},
-    "displayName": "im-welllucky",
-    "description": "Im Welllucky is a portfolio website for Wellington Braga, where he can show his projects and skills to the world.",
-    "homepage": "https://welllucky.me",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/welllucky/imWelllucky"},
-      "release": {
-      "repositoryUrl": "https://github.com/welllucky/imWelllucky",
-      "branches": [
+    "name": "Wellington Braga"
+  },
+  "displayName": "im-welllucky",
+  "description": "Im Welllucky is a portfolio website for Wellington Braga, where he can show his projects and skills to the world.",
+  "homepage": "https://welllucky.me",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/welllucky/imWelllucky"
+  },
+  "release": {
+    "repositoryUrl": "https://github.com/welllucky/imWelllucky",
+    "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
       "master",
       "next",
@@ -28,8 +33,9 @@
         "name": "alpha",
         "prerelease": true
       }
-    ]},
-    "license": "MIT",
+    ]
+  },
+  "license": "MIT",
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
@@ -47,9 +53,11 @@
     "workbox-precaching": "^6.5.4"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.5",
     "@svgr/webpack": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.3.1",
     "jest": "^29.5.0",
