Retirada dos testes padrões do cypress

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,21 +1,21 @@
 {
   "tabWidth": 2,
-  "useTabs": true,
-  "semi": true,
-  "endOfLine": "auto",
-  "singleAttributePerLine": true,
   "printWidth": 80,
+  "endOfLine": "auto",
   "arrowParens": "always",
-  "bracketSameLine": false,
-  "embeddedLanguageFormatting": "auto",
-  "jsxSingleQuote": false,
-  "parser": "babel",
+  "trailingComma": "es5",
+  "semi": true,
+  "useTabs": false,
   "singleQuote": false,
   "bracketSpacing": true,
-  "quoteProps": "consistent",
-  "editorconfig": false,
-  "trailingComma": "all",
+  "vueIndentScriptAndStyle": false,
   "htmlWhitespaceSensitivity": "css",
   "insertPragma": false,
-  "proseWrap": "preserve"
+  "singleAttributePerLine": false,
+  "bracketSameLine": false,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false
 }
