--- a/apps/imwellluck-web/package.json
+++ b/apps/imwellluck-web/package.json
@@ -32,12 +32,13 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "babel-plugin-styled-components": "^2.1.3",
-    "cypress": "^12.12.0",
+    "cypress": "^12.17.2",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.3.1",
     "jest": "^29.5.0",
