--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,146 @@
 {
-  "extends": "next/core-web-vitals",
+  "root": true,
   "parser": "@typescript-eslint/parser",
+  "ignorePatterns": [
+    "node_modules/",
+    "build/",
+    ".next/",
+    "!.prettierrc.js",
+    "!.eslintrc.json",
+    "!.babelrc"
+  ],
   "parserOptions": {
     "ecmaVersion": 2020,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
-  "plugins": [
-    "react-hooks",
-    "react"
-  ],
-  "root": true,
-  "rules": {
-    "camelcase": "warn",
-    "no-console": "warn",
-    "no-debugger": "warn",
-    "no-unused-vars": "error",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "warn"
-  },
-  "overrides": [
-  ],
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
-  "globals": {"React": "writable"},
-  "ignorePatterns": ["node_modules/", "build/", ".next/", "!.prettierrc.js", "!.eslintrc.json", "!.babelrc"]
+  "globals": {
+    "React": true,
+    "jsdom": true,
+    "JSX": true,
+    "BodyInit": true,
+    "RequestInfo": true,
+    "RequestInit": true
+  },
+  "settings": {
+    "next": {
+      "rootDir": "apps/imWellluckY/"
+    },
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".ts", ".tsx"]
+      }
+    }
+  },
+  "plugins": ["@typescript-eslint", "jest"],
+  "extends": [
+    "eslint:recommended",
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "airbnb",
+    "plugin:jsx-a11y/recommended",
+    "plugin:prettier/recommended",
+    "plugin:sonarjs/recommended",
+    "plugin:security/recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "plugin:react-hooks/recommended",
+    "plugin:cypress/recommended",
+    "next",
+    "turbo",
+    "react-hooks",
+    "react",
+    "prettier"
+  ],
+  "rules": {
+    // "@next/next/no-html-link-for-pages": "off",
+    "@next/next/no-html-link-for-pages": ["warn", "apps/**/pages"],
+    "@typescript-eslint/no-unused-vars": "error",
+    // "react/react-in-jsx-scope": "off",
+    // "react/jsx-key": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".ts", ".tsx", ".js", ".jsx"]
+      }
+    ],
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
+    "react/require-default-props": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["hrefLeft", "hrefRight"],
+        "aspects": ["invalidHref", "preferButton"]
+      }
+    ],
+    "jsx-a11y/control-has-associated-label": [
+      "error",
+      {
+        "required": {
+          "some": ["nesting", "id"]
+        }
+      }
+    ],
+    "jsx-a11y/label-has-associated-control": [
+      "error",
+      {
+        "required": {
+          "some": ["nesting", "id"]
+        }
+      }
+    ],
+    "jsx-a11y/label-has-for": [
+      "error",
+      {
+        "required": {
+          "some": ["nesting", "id"]
+        }
+      }
+    ],
+    "no-nested-ternary": "off",
+    "no-console": "error",
+    // "react/no-array-index-key": "off",
+    "import/prefer-default-export": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "react/no-unknown-property": [
+      2,
+      {
+        "ignore": ["jsx"]
+      }
+    ],
+    "camelcase": "error",
+    "no-debugger": "warn",
+    "no-unused-vars": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  }
 }
