--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wcl",
+  "name": "im-anatomy",
   "version": "1.0.0",
   "description": "Welllucky's Components Library",
   "main": "index.ts",
@@ -34,12 +34,16 @@
     "rollup": "^3.26.3",
     "storybook": "^7.1.1",
     "typescript": "^5.1.6",
-    "typescript-plugin-styled-components": "^3.0.0"
+    "typescript-plugin-styled-components": "^3.0.0",
+    "tsconfig": "*",
+    "eslint-config": "*",
+    "test-config": "*"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "styled-components": "^6.0.5",
-    "styled-theming": "^2.2.0"
+    "styled-theming": "^2.2.0",
+    "theme": "*"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
