--- a/apps/imWellluckY/package.json
+++ b/apps/imWellluckY/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "test": "npx cypress run",
-    "test:watch": "npx cypress open"
+    "test:watch": "npx cypress open",
+    "check-format": "prettier --check .",
+    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "check-types": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@types/node": "18.16.2",
@@ -25,7 +28,11 @@
     "styled-components": "^5.3.10",
     "styled-theming": "^2.2.0",
     "typescript": "^5.1.3",
-    "workbox-precaching": "^6.5.4"
+    "workbox-precaching": "^6.5.4",
+    "im-resources": "*",
+    "typing": "*",
+    "components": "*",
+    "theme": "*"
   },
   "resolutions": {
     "styled-components": "^5"
@@ -43,6 +50,8 @@
     "eslint-config-next": "13.3.1",
     "jest": "^29.5.0",
     "jest-styled-components": "^7.1.1",
-    "turbo": "^1.10.12"
+    "turbo": "^1.10.12",
+    "eslint-config": "*",
+    "test-config": "*"
   }
 }
