--- a/package.json
+++ b/package.json
@@ -22,16 +22,10 @@
     "repositoryUrl": "https://github.com/welllucky/imWelllucky",
     "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
-      "master",
-      "next",
-      "next-major",
+      "dev",
       "prod",
       {
         "name": "beta",
-        "prerelease": true
-      },
-      {
-        "name": "alpha",
         "prerelease": true
       }
     ]
