--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,7 +20,8 @@
     "styled-components": "^6.0.5",
     "swr": "^2.2.0",
     "theme": "*",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "next": "13.4.12"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
