refactor: :recycle: Mudança do modo de roteamento do projeto

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "tsconfig/react-library.json",
-  "include": [".", "../test-config"],
+  "include": [".", "../test-config", "../typing/IconProps"],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
     "paths": {
