--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,10 +1,15 @@
 {
   "name": "theme",
   "version": "1.0.0",
-  "files": ["index.tsx"],
+  "files": [
+    "index.tsx"
+  ],
   "description": "imWellluckY themes library",
   "main": "index.tsx",
   "author": "Wellington Braga",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "styled-components": "^6.0.7"
+  }
 }
